--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,64 @@ main:
   - name: Bio
     url: /
     weight: 10
-  - name: Papers
+
+  - name: Publications
+    identifier: works
+    weight: 11
+
+  - name: Selected
+    parent: works
     url: /#papers
     weight: 11
+
+  - name: Journals
+    parent: works
+    url: projects/
+    weight: 12
+
+  - name: Pre-prints
+    parent: works
+    url: /#news
+    weight: 13
+
+  - name: Patents
+    parent: works
+    url:  projects/
+    weight: 14
+
+  # - name: Publications
+  #   url: /#papers
+  #   weight: 11
+
+  - name: TEST
+    url: projects/
+    weight: 12
+
   - name: News
     url: /#news
     weight: 13
-  - name: Experience
+
+  - name: Experiences
     url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
-    weight: 30
-  - name: Teaching
-    url: teaching/
-    weight: 40
+
+
+  # - name: Bio
+  #   url: /
+  #   weight: 10
+
+  # - name: Publications
+  #   url: /#papers
+  #   weight: 11
+
+  # - name: TEST
+  #   url: projects/
+  #   weight: 12
+
+  # - name: News
+  #   url: /#news
+  #   weight: 13
+
+  # - name: Experiences
+  #   url: experience/
+  #   weight: 20
