--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -36,7 +36,7 @@ main:
 
   - name: Selected
     parent: confer
-    url: /#papers
+    url: selected_conferences/
     weight: 11
 
   - name: International
