--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -41,7 +41,7 @@ main:
 
   - name: International
     parent: confer
-    url: selected_conferences/
+    url: international_conferences/
     weight: 12
 
   - name: Domestic
